--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
                 <div class="img-placeholder-lg"><p>this is a placeholder for an image</p></div>
             </div>
         </section>
+        <section class="random">
+            <div class="container">
+                <h2>Some random information</h2>
+                <div class="box-container">
+                    <div class="box">
+                        <div class="img-placeholder-sm"></div>
+                        <p class="subtext">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="box">
+                        <div class="img-placeholder-sm"></div>
+                        <p class="subtext">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="box">
+                        <div class="img-placeholder-sm"></div>
+                        <p class="subtext">this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="box">
+                        <div class="img-placeholder-sm"></div>
+                        <p class="subtext">this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
