--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="hero-info">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <button class="sign-up">Sign up</button>
+                    <button class="sign-up-btn">Sign up</button>
                 </div>
                 <div class="img-placeholder-lg"><p>this is a placeholder for an image</p></div>
             </div>
@@ -61,6 +61,17 @@
             <div class="container">
                 <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
                 <p class="author">-Thor, God of Thunder</p>
+            </div>
+        </section>
+        <section class="cta">
+            <div class="container">
+                <div class="cta-inner-container">
+                    <div class="cta-info">
+                        <p class="cta-title">Call to action! It's time!</p>
+                        <p class="cta-text">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button class="cta-sign-up-btn">Sign up</button>
+                </div>
             </div>
         </section>
     </main>
