--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 </div>
             </div>
         </section>
+        <footer><p>Copyright &copy; The Odin Project 2022</p></footer>
     </main>
 </body>
 </html>
