--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>The Odin Project - Landing Page Challenge</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo"><a href="#">Header Logo</a></div>
+    <header class="primary-header bg-dark text-light">
+        <div class="container flex">
+            <div class="fs-500 fw-700"><a href="#">Header Logo</a></div>
             <nav class="main-nav">
-                <ul class="main-menu">
+                <ul class="main-nav__menu flex">
                     <li><a href="#">header link one</a></li>
                     <li><a href="#">header link two</a></li>
                     <li><a href="#">header link three</a></li>
@@ -29,7 +29,7 @@
                 <div class="hero-info">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <button class="sign-up-btn">Sign up</button>
+                    <button class="button">Sign up</button>
                 </div>
                 <div class="img-placeholder-lg"><p>this is a placeholder for an image</p></div>
             </div>
@@ -70,7 +70,7 @@
                         <p class="cta-title">Call to action! It's time!</p>
                         <p class="cta-text">Sign up for our product by clicking that button right over there!</p>
                     </div>
-                    <button class="cta-sign-up-btn">Sign up</button>
+                    <button class="button button--border">Sign up</button>
                 </div>
             </div>
         </section>
