--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
         </section>
         <!-- Random Info -->
-        <section class="random">
-            <div class="container container--sm">
+        <section class="random py-4">
+            <div class="container container--sm text-center">
                 <h2>Some random information</h2>
-                <div class="flex">
+                <div class="info-boxes flex">
                     <div class="box">
                         <div class="img-placeholder-sm"></div>
                         <p class="subtext">this is some subtext under an illustration or image</p>
@@ -69,8 +69,8 @@
         </section>
         <!-- Call To Action -->
         <section class="cta py-3">
-            <div class="container container--lg bg-accent text-light py-2">
-                <div class="container container--sm flex">
+            <div class="container container--lg py-2 bg-accent text-light br-sm">
+                <div class="container container--sm flex" style="justify-content: space-between;">
                     <div>
                         <p class="fw-700 fs-500">Call to action! It's time!</p>
                         <p>Sign up for our product by clicking that button right over there!</p>
