--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="primary-header bg-dark text-light py-1">
+    <header class="primary-header py-1 text-light bg-dark">
         <div class="container container--lg flex">
             <div class="fs-500 fw-700"><a href="#">Header Logo</a></div>
             <nav class="main-nav">
@@ -26,8 +26,8 @@
     </header>
     <main>
         <!-- Hero -->
-        <section class="hero bg-dark text-light py-4">
-            <div class="container container--lg flex" style="--gap:3rem">
+        <section class="hero py-4 text-light bg-dark">
+            <div class="container container--lg flex">
                 <div class="flow">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
@@ -41,38 +41,38 @@
             <div class="container container--sm text-center">
                 <h2>Some random information</h2>
                 <div class="info-boxes flex">
-                    <div class="box">
+                    <div class="flow">
                         <div class="img-placeholder-sm"></div>
-                        <p class="subtext">this is some subtext under an illustration or image</p>
+                        <p>this is some subtext under an illustration or image</p>
                     </div>
-                    <div class="box">
+                    <div class="flow">
                         <div class="img-placeholder-sm"></div>
-                        <p class="subtext">this is some subtext under an illustration or image</p>
+                        <p>this is some subtext under an illustration or image</p>
                     </div>
-                    <div class="box">
+                    <div class="flow">
                         <div class="img-placeholder-sm"></div>
-                        <p class="subtext">this is some subtext under an illustration or image</p>
+                        <p>this is some subtext under an illustration or image</p>
                     </div>
-                    <div class="box">
+                    <div class="flow">
                         <div class="img-placeholder-sm"></div>
-                        <p class="subtext">this is some subtext under an illustration or image</p>
+                        <p>this is some subtext under an illustration or image</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Quote -->
-        <section class="bg-med py-4">
+        <section class="py-4 bg-med">
             <div class="container container--sm">
-                <p class="fs-600 fst-italic fw-300">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <p class="text-dark fw-700 fs-500 text-right">-Thor, God of Thunder</p>
+                <p class="fs-600 fw-300 fst-italic">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="fs-500 fw-700 text-dark text-right">-Thor, God of Thunder</p>
             </div>
         </section>
         <!-- Call To Action -->
         <section class="cta py-3">
-            <div class="container container--lg py-2 bg-accent text-light br-sm">
-                <div class="container container--sm flex" style="justify-content: space-between;">
+            <div class="container container--lg py-2 text-light bg-accent br-sm">
+                <div class="container container--sm flex">
                     <div>
-                        <p class="fw-700 fs-500">Call to action! It's time!</p>
+                        <p class="fs-500 fw-700">Call to action! It's time!</p>
                         <p>Sign up for our product by clicking that button right over there!</p>
                     </div>
                     <button class="button button--border">Sign up</button>
@@ -81,6 +81,6 @@
         </section>
     </main>
     <!-- Footer -->
-    <footer class="py-2 text-light bg-dark text-center"><p>Copyright &copy; The Odin Project 2022</p></footer>
+    <footer class="py-2 text-center text-light bg-dark"><p>Copyright &copy; The Odin Project 2022</p></footer>
 </body>
 </html>
